--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 }
 
 body{
-    background: #007bff;
+    background: #20b2aa;
 	user-select: none;
 	-webkit-user-drag: none;
 }
 
 ::selection{
     color: #fff;
-    background: #007bff;
+    background: #20b2aa;
 }
 
 .start_btn,
@@ -41,7 +41,7 @@ body{
 .start_btn button{
     font-size: 25px;
     font-weight: 500;
-    color: #007bff;
+    color: #20b2aa;
     padding: 15px 30px;
     outline: none;
     border: none;
@@ -84,7 +84,7 @@ body{
 
 .info_box .info-list .info span{
     font-weight: 600;
-    color: #007bff;
+    color: #20b2aa;
 }
 .info_box .buttons{
     height: 60px;
@@ -105,7 +105,7 @@ body{
     border: none;
     outline: none;
     border-radius: 5px;
-    border: 1px solid #007bff;
+    border: 1px solid #20b2aa;
     transition: all 0.3s ease;
 }
 
@@ -176,7 +176,7 @@ body{
     bottom: 0px;
     left: 0px;
     height: 3px;
-    background: #007bff;
+    background: #20b2aa;
 }
 
 section{
@@ -221,13 +221,13 @@ section .option_list .option:hover{
 section .option_list .option.correct{
     color: #155724;
     background: #d4edda;
-    /*border: 1px solid #c3e6cb;*/
+    border: 1px solid #c3e6cb;
 }
 
 section .option_list .option.incorrect{
     color: #721c24;
     background: #f8d7da;
-    /*border: 1px solid #f5c6cb;*/
+    border: 1px solid #f5c6cb;
 }
 
 section .option_list .option.disabled{
@@ -290,8 +290,8 @@ footer button{
     outline: none;
     color: #fff;
     border-radius: 5px;
-    background: #007bff;
-    border: 1px solid #007bff;
+    background: #20b2aa;
+    border: 1px solid #20b2aa;
     line-height: 10px;
     opacity: 0;
     pointer-events: none;
@@ -300,7 +300,7 @@ footer button{
 }
 
 footer button:hover{
-    background: #0263ca;
+    filter: hue-rotate(300deg);
 }
 
 footer button.show{
@@ -327,7 +327,7 @@ footer button.show{
 
 .result_box .icon{
     font-size: 100px;
-    color: #007bff;
+    color: #20b2aa;
     margin-bottom: 10px;
 }
 
@@ -363,25 +363,25 @@ footer button.show{
     border: none;
     outline: none;
     border-radius: 5px;
-    border: 1px solid #007bff;
+    border: 1px solid #20b2aa;
     transition: all 0.3s ease;
 }
 
 .buttons button.restart{
     color: #fff;
-    background: #007bff;
+    background: #20b2aa;
 }
 
 .buttons button.restart:hover{
-    background: #0263ca;
+    filter: hue-rotate(300deg);
 }
 
 .buttons button.quit{
-    color: #007bff;
+    color: #20b2aa;
     background: #fff;
 }
 
 .buttons button.quit:hover{
     color: #fff;
-    background: #007bff;
+    background: #20b2aa;
 }
